Fix bug where overflowing text in comment cannot be seen

--- a/src/pages/ViewPost/Comment/comment.css
+++ b/src/pages/ViewPost/Comment/comment.css
@@ -1,5 +1,7 @@
 .comment {
     padding: 12px;
+    width: 850px;
+
     }
 
     .comment-header {
@@ -13,6 +15,7 @@
         margin-bottom: 5px;
         margin-left: 25px;
         font-size: 12px;
+        overflow-wrap: break-word;
     }
 
     .comment-footer {
